# bms

./: .gitignore  BMSMonitorApp.spec  BUILD.md  README.md  build.py  list_hid_devices.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: README.md
src/: __init__.py  main_window.py
src/components/: __init__.py  balancing_page.py  console_page.py  debug_page.py  firmware_upgrade_page.py  master_page.py  nav_bar.py  plot_page.py  sidebar.py
src/data/: __init__.py  bms_connection.py  hid_connection.py
src/protocol/: __init__.py  modbus_rtu.py
src/utils/: logger.py  message_box.py  theme.py
