[project]
name = "bmsmonitorappv2"
version = "0.1.0"
description = "BMS Monitoring Desktop Application with Modbus RTU Protocol"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "pyserial>=3.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
